--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "typeface-montserrat": "^1.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
