--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.3.0",
+    "dotenv": "^16.3.1",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
