--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.3.0",
+    "@types/chart.js": "^2.9.41",
+    "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
     "next": "14.0.3",
     "react": "^18",
