--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-syntax-highlighter": "^15.5.0",
     "typeface-montserrat": "^1.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.4.10",
     "eslint": "^8",
