--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "react-syntax-highlighter": "^15.5.0",
     "typeface-montserrat": "^1.1.13"
   },
