--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-syntax-highlighter": "^15.5.0",
-    "typeface-montserrat": "^1.1.13"
+    "typeface-montserrat": "^1.1.13",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "@types/validator": "^13.11.7",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.4.10",
     "eslint": "^8",
