--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-syntax-highlighter": "^15.5.0",
+    "sharp": "^0.33.1",
     "typeface-montserrat": "^1.1.13",
     "validator": "^13.11.0"
   },
