--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.3.0",
+    "@paddle/paddle-js": "^0.5.4",
     "@types/chart.js": "^2.9.41",
     "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
